# askills

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py
k8s/: deployment.yaml  secret.yaml  service.yaml
skills/hello-world/: SKILL.md
testdata/: create_samples.py  financial_summary_2024.xlsx  pricing_calculator.xlsx
