[project]
name = "claude-agent-skills"
version = "0.1.0"
description = "Claude Agent SDK with skills support"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    # HTTP service
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    # PDF skill
    "pdf2image>=1.16.0",
    "PyPDF2>=3.0.0",
    "pypdf>=3.0.0",
    "pikepdf>=8.0.0",
    "Pillow>=10.0.0",
    # Excel/XLSX skill
    "openpyxl>=3.1.0",
    # PowerPoint/PPTX and Word/DOCX skills
    "python-pptx>=0.6.21",
    "python-docx>=0.8.11",
    "lxml>=4.9.0",
    # Utilities
    "python-magic>=0.4.27",
    "PyYAML>=6.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
